--- a/welcome/index.html
+++ b/welcome/index.html
@@ -8,8 +8,9 @@
         @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
         @import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
 
-        body {
+        body, body.remark-container {
             font-family: 'Droid Serif', serif;
+            background: #000000;
         }
 
         h1, h2, h3, .headline {
@@ -34,6 +35,12 @@
         li,
         p {
             margin: 25px 0;
+        }
+
+        .remark-slide-scaler {
+            box-shadow: none;
+            -webkit-box-shadow: none;
+            -moz-box-shadow: none;
         }
 
         .remark-slide-content {
